@@ -1,0 +1,101 @@
+The following package should be installed before RainbruRPG is installed:
+
+* Freetype 9.18
+  + Needed.
+  + homepage:
+    http://freetype.org
+  + download:
+    http://sourceforge.net/project/showfiles.php?group_id=3157
+
+* Ogre3D 1.4 
+  + Needed.
+  + homepage:
+    http://www.ogre3d.org
+  + download:
+    http://www.ogre3d.org/download
+
+* Plugin Landscape Scene Manager 2
+  + Needed
+  + homepage:
+    http://www.ogre3d.org/wiki/index.php/Paging_Scene_Manager
+  + download:
+    Can be found in the Ogre3D cvs repository
+
+* OIS 0.1
+  + Needed
+  + homepage:
+    http::/sourceforge.net/projects/wgois/
+  + download:
+    http::/sourceforge.net/projects/wgois/files/
+
+* FoxToolkit 1.6
+  + Needed
+  + homepage:
+  http://fox-toolkit.org
+  + download:
+  http://fox-toolkit.org/download.html
+
+* Libcurl 7.15
+  + Needed
+  + homepage:
+    http://curl.haxx.se
+  + download:
+    http://curl.haxx.se/download.html
+
+* Boost.Filesystem 1.34
+  + homepage:
+    http://boost.org
+  + download:
+    http::/sourceforge.net/projects/boost/files/
+  
+* Boost.Thread 1.34
+  + homepage:
+    http://boost.org
+  + download:
+    http::/sourceforge.net/projects/boost/files/
+
+* Enet 1.1
+  + homepage:
+    http://enet.bespin.org
+  + download:
+    http://enet.bespin.org/SourceDistro.html
+
+* Glib 2.0
+  + homepage:
+    http://www.gtk.org
+  + download:
+    http://www.gtk.org/download.html
+
+* libsigc++ 2.0
+  + homepage:
+    http://libsigc.sourceforge.net
+  + download:
+    http://libsigc.sourceforge.net/stable.shtml
+
+* GD 2.0
+  + homepage:
+    http://www.libgd.org
+  + download:
+    http://www.libgd.org/Downloads
+
+* Gnet 2.0
+  + homepage:
+    http://live.gnome.org/GNetLibrary
+  + download:
+    http://ftp.gnome.org/pub/GNOME/sources/gnet/2.0/
+
+* Libmagic 4.26
+  + Recommended 
+    Needed to build the game server.
+  + homepage:
+    http://darwinsys.com/file  
+  + download:
+    ftp://ftp.astron.com/pub/file/
+
+* Cppunit 1.12
+  + Recommended.
+    Needed to be able to build unit tests.
+  + homepage:
+    http://apps.sourceforge.net/mediawiki/cppunit/
+  + download:
+    http://sourceforge.net/projects/cppunit/files/
