@@ -72,11 +72,14 @@ name, date, heure, gamestate, position, name perso, name server, versions
    server-gui/telnet-gui/  A telnet-based command-line remote control
 
 *** v0.0.7
+**** TODO SPARE TIME CamelCase all filename
+**** TODO SPARE TIME Modification of existing unittests
+**** TODO SPARE TIME New unit tests implementation
 **** Switch to GPLv3
 - [ ] See if OSI/Sourceforge are agree
 - [ ] See compatibility with EasyBMP/TinyXML
 
-**** KeyboardNavigation for OgreGui
+**** Keyboard Navigation for OgreGui
 **** tool/adminsite-databackup
     A comand-line tool to backup adminsite XML files that takes the version
     number as argument (used by backup_prog script).
@@ -99,14 +102,18 @@ name, date, heure, gamestate, position, name perso, name server, versions
 - [ ] May use C++ exceptions
 
 *** v0.0.6
+**** TODO SPARE TIME Uses GTS_* and gettext                           [0%]
+   Please use rainbrudef.h:GTS_* for all strings using sprintf and parameters
+   Add the translated sources to po/POTFILES.in
+     common/ and maincore/ finished
+     do not translate design (library should change)
+     ogregui/multicolumnlistitem.cpp was the last translated source
 **** TODO OgreGui2 integration and implementation                     [0%]
      :CLOCK:
      CLOCK: [2010-02-11 jeu 10:27]--[2010-02-11 jeu 10:28] =>  0:01
      CLOCK: [2010-02-09 mar 10:17]--[2010-02-09 mar 10:23] =>  0:06
      :END:
 
-- [ ] Create a configure option to switch between oldOgreGui and new one.
-      Default set to old since ogreGui2 isn't fully implemented.
 - [ ] OgreGui2 is a separate project that intends to completely replace OgreGui.
       It is a new design that should be more bug-free. This project must be 
       merged with the current rainbrurpg sources.
@@ -114,10 +121,14 @@ name, date, heure, gamestate, position, name perso, name server, versions
 **** TODO Miscelaneous                                                [0%]
 - [ ] Remove IrrClient and oldXClient (3,082 SLOC) and explain it in regtests.
 - [ ] Trying to fix Doxugen documentation TODO items.
+- [ ] Trying to fix configure script warnings
 - [ ] Datafiles cleanup (many are not used anymore)
 
-**** Coding standards                                            [20%]
+**** TODO Coding standards                                            [71%]
      :CLOCK:
+     CLOCK: [2010-02-11 jeu 15:32]--[2010-02-11 jeu 15:45] =>  0:13
+     CLOCK: [2010-02-11 jeu 14:49]--[2010-02-11 jeu 15:22] =>  0:33
+     CLOCK: [2010-02-11 jeu 14:03]--[2010-02-11 jeu 14:42] =>  0:39
      CLOCK: [2010-02-11 jeu 11:01]
      CLOCK: [2010-02-11 jeu 10:28]--[2010-02-11 jeu 11:01] =>  0:33
      CLOCK: [2010-02-10 mer 10:45]--[2010-02-10 mer 10:47] =>  0:02
@@ -126,9 +137,17 @@ name, date, heure, gamestate, position, name perso, name server, versions
       In the same way, external code should move to lib/ directory (eg. TinyXml
       and EasyBMP, actually in common/)
 - [ ] Add GNU headers to all Makefile.am files
-- [ ] Should remove all unused source files from topdir
+- [X] Should remove all unused source files from topdir     [100%]
       There are autogenerated files from autoproject
-- [ ] Make a DEPENDENCIES file in topdir
+      - [X] RainbruRPG.cc
+      - [X] system.h: No generated file
+      - [X] xmalloc.c
+      - [X] xmalloc.h    
+- [X] Fix the common/version.c error due to changes in configure.in
+- [X] Make a DEPENDENCIES file in topdir                    [100%]
+      - [X] Add 'homepage links' to all depencies to all depencies
+      - [X] Add 'download links' to all depencies
+- [X] Texinfo should take version and revision from configure.in
 - [X] Doxyfile should take version from configure
       By creating a Doxyfile.in file (Texinfo file too)
       - [X] Then, remove Doxyfile and add Doxyfile.in from cvs.
